<resources>
    <string name="app_name">PopularMovies</string>
    <string name="action_settings">Settings</string>
    <string name="release_date_title">Release Date</string>
    <string name="votes_title">Average votes</string>
    <string name="overview_title">PLOT SYNOPSIS</string>
    <string name="trailers_title">TRAILERS</string>
    <string name="reviews_title">REVIEWS</string>
    <string name="sort_order_title">Sort Order</string>
    <string name="sort_order_key" translatable="false">sortOrder</string>
    <string name="sort_order_popular" translatable="false">popular</string>
    <string name="sort_order_toprated" translatable="false">top_rated</string>
    <string name="popular">Popular</string>
    <string name="toprated">Top Rated</string>
    <string name="fav_movies">Favourites</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_reviews">No reviews yet !!!</string>
    <string name="fav_add">Mark as Favourite</string>
    <string name="fav_remove">UnMark Favourite</string>
</resources>
