<!-- ScrollView is used to enable vertical scrolling -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.p1.udacity.com.popularmovies.DetailActivityFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_detail"
    android:orientation="vertical"
    android:id="@+id/detail_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Weight set to 0.5 so that both the components occupy equal space-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height"
            android:layout_weight = "0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titleText"
                android:textSize="@dimen/bigger_font_size"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:includeFontPadding="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_title"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/releaseDate"
                    android:layout_marginTop="@dimen/text_margin_top"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/votes_margin_top"
                    android:text="@string/votes_title"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/votes"
                    android:layout_marginTop="@dimen/text_margin_top"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/favourite_holder"
                    android:layout_marginTop="@dimen/votes_margin_top"/>

            </LinearLayout>
            
        </LinearLayout>
        
        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height"
            android:id="@+id/posterHolder"
            android:layout_weight = "0.5"/>


    </LinearLayout>

    <!-- Made use of android style- listSeparatorTextViewStyle to give a heading to the synopsis textview.
        Referred http://stackoverflow.com/questions/15368737/how-to-make-a-textview-look-like-a-settings-preferencecategory-header for the same.
    -->
    <TextView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/overview_title"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_marginTop="@dimen/overview_margin_top"
    android:textSize="@dimen/bigger_font_size"
    android:textStyle="bold"
    android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/overviewText"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <!-- Trailers section -->
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/trailers_title"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_marginTop="@dimen/overview_margin_top"
        android:textSize="@dimen/bigger_font_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/trailer_section"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/trailers_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>

    <!-- Reviews section -->

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/reviews_title"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_marginTop="@dimen/overview_margin_top"
        android:textSize="@dimen/bigger_font_size"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reviews_listview"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
</ScrollView>